Reference target username in reply field

--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -325,14 +325,16 @@
     
     <template id="addReplyTemplate">
         <div class="add_reply-cont">
-            <textarea placeholder="This is where we reply." id="replyBody"></textarea>
+            <div class="replyfieldBody">
+
+            </div>
             <div class="ar-footer">
                 <div class="ar-user">
                     <img src="" onerror="this.onerror=null; this.src='/images/onerror/user_no_photo.png'">
                     <span class="ar-username"></span>
                 </div>
                 <a class="cancel_addreply-btn">Cancel</a>
-                <a class="reply-btn" id="addReplyToComment">Send</a>
+                <a class="send_reply-btn">Send</a>
             </div>
         </div>
     </template>
