--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -851,7 +851,7 @@ header .header-wrap {
 .filter-addseries .fadds-dropdowns > select {
   outline: none;
   border: none;
-  background: var(--background-color-hover2);
+  background: var(--background-color5);
   color: var(--text-color1);
   padding: 4px;
   border-radius: 5px;
