--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -934,7 +934,7 @@ header {
         >select {
             outline: none;
             border: none;
-            background: var(--background-color-hover2);
+            background: var(--background-color5);
             color: var(--text-color1);
             padding: 4px;
             border-radius: 5px;
