--- a/OmneFictio.Web/wwwroot/css/chapter.scss
+++ b/OmneFictio.Web/wwwroot/css/chapter.scss
@@ -44,7 +44,7 @@ main {
             transition: background-color 0.1s;
 
             &:hover {
-                background-color: var(--background-color-hover2);
+                background-color: var(--background-color5);
             }
         }
 
@@ -67,7 +67,7 @@ main {
                 }
 
                 &:hover {
-                    background-color: var(--background-color-hover2);
+                    background-color: var(--background-color5);
                 }
             }
 
