--- a/OmneFictio.Web/wwwroot/css/post.css
+++ b/OmneFictio.Web/wwwroot/css/post.css
@@ -649,7 +649,7 @@ main {
   padding-bottom: 6px;
 }
 .modal-chapters .mc-header {
-  border-bottom: 2px solid var(--background-color-hover4);
+  border-bottom: 2px solid var(--background-color3);
   display: flex;
   flex-direction: row;
 }
@@ -677,13 +677,13 @@ main {
   width: 100%;
   overflow: hidden;
   cursor: pointer;
-  border-bottom: 1px solid var(--background-color-hover2);
+  border-bottom: 1px solid var(--background-color5);
 }
 .modal-chapters .mc-body ul > li > a {
   padding: 6px 20px;
 }
 .modal-chapters .mc-body ul > li:hover {
-  background-color: var(--background-color-hover1);
+  background-color: var(--background-color4);
 }
 .modal-chapters .mc-body ul > li:last-child {
   border-bottom: unset;
