--- a/OmneFictio.Web/wwwroot/css/post.scss
+++ b/OmneFictio.Web/wwwroot/css/post.scss
@@ -738,7 +738,7 @@ main {
     padding-bottom: 6px;
 
     .mc-header {
-        border-bottom: 2px solid var(--background-color-hover4);
+        border-bottom: 2px solid var(--background-color3);
         display: flex;
         flex-direction: row;
 
@@ -769,14 +769,14 @@ main {
                 width: 100%;
                 overflow: hidden;
                 cursor: pointer;
-                border-bottom: 1px solid var(--background-color-hover2);
+                border-bottom: 1px solid var(--background-color5);
 
                 >a {
                     padding: 6px 20px;
                 }
 
                 &:hover {
-                    background-color: var(--background-color-hover1);
+                    background-color: var(--background-color4);
                 }
 
                 &:last-child {
