--- a/OmneFictio.Web/wwwroot/css/profile.css
+++ b/OmneFictio.Web/wwwroot/css/profile.css
@@ -377,7 +377,7 @@
   gap: 10px;
   align-items: center;
   padding: 14px;
-  border-bottom: 1px solid var(--background-color-hover1);
+  border-bottom: 1px solid var(--background-color4);
 }
 #profile-friends .s-friends .sf-header .searchF-wrap {
   width: 70%;
@@ -465,7 +465,7 @@
   margin-right: 6px;
 }
 #profile-friends .s-friends .sf-list .sf-usercont .username a:hover {
-  background-color: var(--background-color-hover1);
+  background-color: var(--background-color4);
 }
 #profile-friends .s-friends .sf-list .sf-usercont .usermenubtn {
   display: flex;
@@ -479,7 +479,7 @@
   transition: 0.1s ease;
 }
 #profile-friends .s-friends .sf-list .sf-usercont .usermenubtn:hover {
-  background-color: var(--background-color-hover1);
+  background-color: var(--background-color4);
 }
 
 @media (min-width: 576px) {
