--- a/OmneFictio.Web/wwwroot/css/read.css
+++ b/OmneFictio.Web/wwwroot/css/read.css
@@ -197,7 +197,7 @@ main {
 }
 .orderby-cont .obt-header {
   width: 100%;
-  border-bottom: 2px solid var(--background-color-hover4);
+  border-bottom: 2px solid var(--background-color3);
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -268,7 +268,7 @@ main {
 }
 .filter-cont .f-header {
   width: 100%;
-  border-bottom: 2px solid var(--background-color-hover4);
+  border-bottom: 2px solid var(--background-color3);
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -400,7 +400,7 @@ main {
 .filter-cont .f-body .f-options .f-allow18 {
   outline: none;
   border: none;
-  background: var(--background-color-hover2);
+  background: var(--background-color5);
   color: var(--text-color1);
   padding: 4px;
   border-radius: 5px;
