--- a/OmneFictio.Web/wwwroot/css/read.scss
+++ b/OmneFictio.Web/wwwroot/css/read.scss
@@ -225,7 +225,7 @@ main {
 
     .obt-header {
         width: 100%;
-        border-bottom: 2px solid var(--background-color-hover4);
+        border-bottom: 2px solid var(--background-color3);
         display: flex;
         flex-direction: row;
         align-items: flex-start;
@@ -299,7 +299,7 @@ main {
     }*/
     .f-header {
         width: 100%;
-        border-bottom: 2px solid var(--background-color-hover4);
+        border-bottom: 2px solid var(--background-color3);
         display: flex;
         flex-direction: row;
         align-items: flex-start;
@@ -451,7 +451,7 @@ main {
             .f-allow18 {
                 outline: none;
                 border: none;
-                background: var(--background-color-hover2);
+                background: var(--background-color5);
                 color: var(--text-color1);
                 padding: 4px;
                 border-radius: 5px;
