--- a/OmneFictio.Web/wwwroot/css/settings.scss
+++ b/OmneFictio.Web/wwwroot/css/settings.scss
@@ -80,7 +80,7 @@ nav {
                     padding: 7px 40px 7px 20px;
                     font-size: 1.5rem;
                     transition: all 0.1s ease;
-                    border-bottom: 1px solid var(--background-color-hover1);
+                    border-bottom: 1px solid var(--background-color4);
 
                     &:hover {
                         background-color: var(--settings-hovernav);
