--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -3,14 +3,14 @@
 :root, .darkmode{
     --background-color1: #1D1D1D;
     --background-color2: #313131;
-    --background-color-hover1: #373737;
-    --background-color-hover2: #4E4E4E;
-    --background-color-hover3: #5e5e5e;
-    --background-color-hover4: #3b3b3b;
+    --background-color3: #323232;
+    --background-color4: #373737;
+    --background-color5: #4E4E4E;
+    --background-color6: #5e5e5e;
 
     --text-color1: #ffffff;
     --text-color2: #bababa;
-    --text-color-hover1: #cccccc;
+    --text-color3: #cccccc;
 
     --div-boxshadow1: #31313150;
     --text-boxshadow1: #ffffff50;
@@ -83,14 +83,14 @@
 .lightmode{
     --background-color1: #f0f0f0;
     --background-color2: #dcdcdc;
-    --background-color-hover1: #d1d8db;
-    --background-color-hover2: #c5c5c5;
-    --background-color-hover3: #c5c5c5;
-    --background-color-hover4: #b5b5b5;
+    --background-color3: #b5b5b5;
+    --background-color4: #d1d8db;
+    --background-color5: #c5c5c5;
+    --background-color6: #c5c5c5;
 
     --text-color1: #282828;
     --text-color2: #393939;
-    --text-color-hover1: #757575;
+    --text-color3: #757575;
     
     --div-boxshadow1: #e5e5e550;
     --text-boxshadow1: #00000050;
@@ -164,15 +164,15 @@
 .darkmode{
     --background-color1: #1D1D1D;
     --background-color2: #313131;
-    --background-color-hover1:#373737;
-    --background-color-hover2:#4E4E4E;
-    --background-color-hover3:#5e5e5e;
-    --background-color-hover4:#3b3b3b;
+    --background-color4:#373737;
+    --background-color5:#4E4E4E;
+    --background-color6:#5e5e5e;
+    --background-color3:#3b3b3b;
     --div-boxshadow1:#31313150;
 
     --text-color1: #ffffff;
     --text-color2:#bababa;
-    --text-color-hover1: #cccccc;
+    --text-color3: #cccccc;
     --text-boxshadow1:#ffffff50;
     --text-boxshadow2:#ffffff70;
 }*/
