optimizing reply system

--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -232,9 +232,7 @@
                         <a class="c-replybtn">Reply</a>
                     </div>
                     <div class="get_replies">
-                        <span class="get_replies-text">
-
-                        </span>
+                        Replies
                     </div>
                 </div>
             </div>
