--- a/OmneFictio.Web/wwwroot/css/comment_section.scss
+++ b/OmneFictio.Web/wwwroot/css/comment_section.scss
@@ -92,17 +92,19 @@
 }
 
 
-
 a.reply_target {
     display: inline;
-    text-decoration: underline;
-    font-family: 'Itim';
     color: var(--text-color2);
-    background-color: var(--background-color2);
-    padding: 3px 6px;
     line-height: 1.6rem;
     border-radius: 4px;
     cursor: pointer;
+    padding: 0px 6px;
+    font-size: 1rem;
+    font-family: 'Itim';
+
+    &:hover {
+        text-decoration: underline;
+    }
 }
 
 
@@ -619,7 +621,7 @@ a.reply_target {
             }
 
             .mrr-text {
-                margin-bottom: 4px;
+                margin-bottom: 6px;
                 font-size: 0.9rem;
                 font-family: "Gudea", sans-serif;
                 line-height: 1rem;
