new index page - 1

--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -455,6 +455,12 @@
                 <li><a href="#">
                         <div class="dw-icon-cont"><i class="bi bi-cart"></i></div>Shop
                     </a></li>
+                <li class="dw-chat-btn"><a href="#">
+                        <div class="dw-icon-cont"><i class="bi bi-chat-dots"></i></div>Chat
+                    </a></li>
+                <li class="dw-notifications-btn"><a href="#">
+                        <div class="dw-icon-cont"><i class="bi bi-bell"></i></div>Notifications
+                    </a></li>
                 <li><a href="/settings">
                         <div class="dw-icon-cont"><i class="bi bi-gear"></i></div>Settings
                     </a></li>
@@ -462,7 +468,7 @@
         </div>
         @if (userId != null)
         {
-            <a class="logoutBtn" class="dw-redbutton">
+            <a class="logoutBtn dw-redbutton">
                 <div class="dw-icon-cont"><i class="bi bi-box-arrow-left"></i></div>Logout
             </a>
         }
