--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -27,6 +27,8 @@
     --accountdropdown-themeswitcher: #454545;
     --accountdropdown-themeswitcher-hover: #4f4f4f;
     --shortcuticons-color: #ffffff;
+    --searchbar-bg-color: #313131;
+    --searchbar-boxshadow: #31313150;
     //nav
     --navlink-readingtime-color: #415050;
     --navlink-readingtime-color-hover: #607d7d;
@@ -36,6 +38,7 @@
     --navlink-others-color-hover: #5f5a66;
     //index
     --index-post-bg-color: #222222;
+    --link_group-bg-color: #313131;
     //read
     //register
     --register-form-color: #404040;
@@ -107,6 +110,8 @@
     --accountdropdown-themeswitcher: #d2d2d2;
     --accountdropdown-themeswitcher-hover: #c1c1c1;
     --shortcuticons-color: #626262;
+    --searchbar-bg-color: #f0f0f0;
+    --searchbar-boxshadow: #6868684f;
     //nav
     --navlink-readingtime-color: #9298b9;
     --navlink-readingtime-color-hover: #777ea8;
@@ -116,6 +121,7 @@
     --navlink-others-color-hover: #816f96;
     //index
     --index-post-bg-color: #e5e5e5;
+    --link_group-bg-color: #ffffff;
     //read
     //register
     --register-form-color: #f0f0f0;
@@ -130,7 +136,7 @@
     --pd-actionbtns-color-hover2: #bbbbbb;
     --comment-menu-bgcolor: #e3e3e3;
     --reply-bgcolor: #dcdcdc;
-    --replies-bgcolor: #cfcfcf;
+    --replies-bgcolor: #f0f0f0;
     //settings
     --settings-hovernav: #e3e3e3;
     --settings-activetab: #32a1bc;
