--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="~/css/postitem.css" asp-append-version="true" />
     }
     @section Scripts {
-        <script src="~/js/index.js" asp-append-version="true" ></script>
+        <script src="~/js/index.js" asp-append-version="true"></script>
     }
 }
 @{
@@ -15,111 +15,87 @@
     string? username = User.FindFirst("unique_name")?.Value;
     string? userPicture = User.FindFirst("actort")?.Value;
 }
-<!--
-<div><span>User ID and Username:</span>
-{
-    if(Model.sessionUserId != null){
-        <span>Model.sessionUserId</span>
-    }
-    <span> --- </span>
-    if(Model.sessionUsername != null){
-        <span>Model.sessionUsername</span>
-    }
-}
-</div>
--->
-<div class="linkgroups">
-    <div class="linkgroup_cont readingtime">
-        <span>Reading Time</span>
-        <div class="linkgroup">
-            <a class="link_cont" href="/Read/Story">
-                <i class="bi bi-book-fill"></i>
-                <span>Story</span>
-            </a>
-            <a class="link_cont" href="/Read/Scenario">
-                <i class="bi bi-book-half"></i>
-                <span>Scenario</span>
-            </a>
-            <a class="link_cont" href="/Read/Fanfiction">
-                <i class="bi bi-book"></i>
-                <span>Fanfiction</span>
-            </a>
-            <a class="link_cont" href="/Read/Plot">
-                <i class="bi bi-journal-text"></i>
-                <span>Plot</span>
-            </a>
+
+<nav class="nav_index">
+    <span>Read boi</span>
+    <div class="start_reading_links link_group">
+        <a class="link_cont" href="/Read/Story">
+            <i class="bi bi-book-fill"></i>
+            <span>Story</span>
+        </a>
+        <a class="link_cont" href="/Read/Scenario">
+            <i class="bi bi-book-half"></i>
+            <span>Scenario</span>
+        </a>
+        <a class="link_cont" href="/Read/Fanfiction">
+            <i class="bi bi-book"></i>
+            <span>Fanfiction</span>
+        </a>
+        <a class="link_cont" href="/Read/Plot">
+            <i class="bi bi-journal-text"></i>
+            <span>Plot</span>
+        </a>
+    </div>
+    <div class="community_links link_group">
+        <div class="link_cont">
+            <i class="bi bi-card-heading"></i>
+            <span>Requests</span>
+        </div>
+        <div class="link_cont">
+            <i class="bi bi-people"></i>
+            <span>Community</span>
         </div>
     </div>
-    <div class="linkgroup_cont aboutyou">
+    @if (username != null)
+    {
         <span>About You</span>
-        <div class="linkgroup">
-            @if(username != null){
-                <a class="link_cont" href="/u/@username">
-                    <i class="bi bi-person"></i>
-                    <span>Profile</span>
-                </a>
-                <a class="link_cont" href="/u/@username/saved">
-                    <i class="bi bi-archive"></i>
-                    <span>Library</span>
-                </a>
-            }
-            else {
-                <a class="link_cont">
-                    <i class="bi bi-person"></i>
-                    <span>Profile</span>
-                </a>
-                <a class="link_cont">
-                    <i class="bi bi-archive"></i>
-                    <span>Library</span>
-                </a>
-            }
+        <div class="about_you_links link_group">
+            <a class="link_cont" href="/u/@username">
+                <i class="bi bi-person"></i>
+                <span>Profile</span>
+            </a>
+            <a class="link_cont" href="/u/@username/saved">
+                <i class="bi bi-archive"></i>
+                <span>Library</span>
+            </a>
             <a class="link_cont" href="/settings/customize">
                 <i class="bi bi-sliders2"></i>
                 <span>Customize</span>
             </a>
         </div>
-    </div>
-    <div class="linkgroup_cont misclinks">
-        <div class="linkgroup">
-            <div class="link_cont">
-                <i class="bi bi-card-heading"></i>
-                <span>Requests</span>
-            </div>
-            <div class="link_cont">
-                <i class="bi bi-people"></i>
-                <span>Community</span>
-            </div>
-            <div class="link_cont">
-                <i class="bi bi-cart"></i>
-                <span>Shop</span>
-            </div>
-            <a class="link_cont" href="/settings">
-                <i class="bi bi-gear"></i>
-                <span>Settings</span>
-            </a>
-            <div class="link_cont">
-                <i class="bi bi-newspaper"></i>
-                <span>News</span>
-            </div>
-            <div class="link_cont">
-                <i class="bi bi-mortarboard"></i>
-                <span>Tutorials</span>
-            </div>
+    }
+    <span>Miscellaneous</span>
+    <div class="misc_links link_group">
+        <div class="link_cont">
+            <i class="bi bi-cart"></i>
+            <span>Shop</span>
+        </div>
+        <a class="link_cont" href="/settings">
+            <i class="bi bi-gear"></i>
+            <span>Settings</span>
+        </a>
+        <div class="link_cont">
+            <i class="bi bi-newspaper"></i>
+            <span>News</span>
+        </div>
+        <div class="link_cont">
+            <i class="bi bi-mortarboard"></i>
+            <span>Tutorials</span>
         </div>
     </div>
-</div>
+</nav>
+<div class="tutorials">
+    <div class="featured">
+        <div class="swiper-cont">
+            <img src="/images/misc/tutorial1.webp" alt="">
+        </div>
+        <div class="featured_description">
+            <h4>Writing about animals</h4>
+            <span>In this tutorial, we will examine how we can give life to animals. Writing an animal is not as simple as you might think!</span>
+        </div>
+    </div>
+    <h3 class="tcates-title">Tutorials</h3>
+    <div class="tutorial-categories">
 
-<div class="topposts_group">
-    <div class="postlist_cont todaytop-cont">
-        <span class="top_header">Today's Top Posts</span>
-        <div class="postlist todaytop_body">
-            
-        </div>
-    </div>
-    <div class="postlist_cont monthtop-cont">
-        <span class="top_header">Month's Top Posts</span>
-        <div class="postlist monthtop_body">
-            
-        </div>
     </div>
 </div>
