--- a/OmneFictio.Web/wwwroot/css/index.css
+++ b/OmneFictio.Web/wwwroot/css/index.css
@@ -1,170 +1,159 @@
+body {
+  background-color: var(--background-color1);
+}
+
+header {
+  border-bottom: 1px solid var(--background-color2);
+}
+
 main {
   display: flex;
   flex-direction: column;
-  color: var(--text-color1);
-  position: relative;
-  padding-top: 4px;
 }
 
-.linkgroups {
+nav.nav_index {
   display: flex;
   flex-direction: column;
-}
-.linkgroups .linkgroup_cont {
   width: 100%;
-  margin-bottom: 10px;
-  font-family: "Itim", cursive;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  box-shadow: 0px 2px 4px -2px rgba(0, 0, 0, 0.25);
+  margin-bottom: 20px;
 }
-.linkgroups .linkgroup_cont:last-child {
-  margin-bottom: unset;
-}
-.linkgroups .linkgroup_cont > span {
-  padding-top: 6px;
-  font-size: 2rem;
+nav.nav_index > span {
+  margin: 10px 0 4px;
+  display: block;
+  width: 100%;
   text-align: center;
+  font-family: "Josefin Sans";
+  font-size: 1.2rem;
 }
-.linkgroups .linkgroup_cont .linkgroup {
+nav.nav_index .link_group {
   width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
 }
-.linkgroups .linkgroup_cont .linkgroup .link_cont {
-  height: 100px;
-  width: 24%;
+nav.nav_index .link_group .link_cont {
   padding: 7px 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   cursor: pointer;
+  align-items: center;
 }
-.linkgroups .linkgroup_cont .linkgroup .link_cont i {
-  font-size: 2.5rem;
+nav.nav_index .link_group .link_cont i {
+  font-size: 2rem;
   text-align: center;
-  height: 50px;
+  height: 32px;
+  display: flex;
 }
-.linkgroups .linkgroup_cont .linkgroup .link_cont span {
+nav.nav_index .link_group .link_cont span {
   text-align: center;
   transition: 0.1s;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 32px;
+  height: 30px;
+  font-size: 1rem;
+  font-family: "Itim";
 }
-.linkgroups .linkgroup_cont .linkgroup .link_cont i.bi-person {
-  font-size: 2.8rem;
+nav.nav_index .link_group .link_cont:hover > span {
+  font-size: 1.1rem;
+  text-decoration: underline;
+}
+nav.nav_index .link_group .link_cont i.bi-person {
+  font-size: 2.3rem;
+}
+nav.nav_index .community_links {
+  margin-top: 6px;
 }
 
-.darkmode .linkgroup_cont {
-  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.25);
-}
-
-.misclinks > .linkgroup {
-  padding: unset;
-}
-
-.topposts_group {
-  display: flex;
-  flex-direction: column;
-  gap: 14px 3%;
-  margin-top: 20px;
-}
-.topposts_group .postlist_cont {
+.tutorials {
   display: flex;
   flex-direction: column;
   width: 100%;
 }
-.topposts_group .postlist_cont .top_header {
-  text-align: center;
-  font-size: 1.6rem;
-  font-family: "Doppio One";
+.tutorials .featured {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px 2%;
+}
+.tutorials .featured .swiper-cont {
+  width: 100%;
+  aspect-ratio: 1/0.5;
+  border-radius: 10px;
+  background-color: red;
+}
+.tutorials .featured .swiper-cont img {
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+}
+.tutorials .featured .featured_description {
+  width: 100%;
+  border-radius: 10px;
+  border: 2px solid var(--background-color2);
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+}
+.tutorials .featured .featured_description h4 {
   margin-bottom: 10px;
+  font-family: "Josefin Sans";
+  font-size: 1.1em;
 }
-.topposts_group .postlist_cont .postlist {
-  width: 100%;
+.tutorials .featured .featured_description span {
+  font-family: "Gudea";
+  font-size: 0.9em;
 }
-.topposts_group .postlist_cont .postlist .post {
-  margin-bottom: 12px;
-  background-color: var(--index-post-bg-color);
+.tutorials .tcates-title {
+  margin: 14px 0 6px;
+  font-size: 1.8rem;
+  font-family: "Josefin Sans";
+  text-align: center;
 }
-.topposts_group .postlist_cont .postlist .post .p-info {
-  background-color: var(--index-post-bg-color);
+.tutorials .tutorial-categories {
+  padding: 10px;
 }
+
 @media (min-width: 768px) {
   main {
-    padding-top: 20px;
+    flex-direction: row;
+    gap: 20px;
   }
-  .linkgroups .linkgroup_cont {
-    background-color: var(--background-color1);
-    border-radius: 14px;
+  nav.nav_index {
+    width: 340px;
+  }
+  nav.nav_index .link_group {
+    padding: 10px 0 6px;
+    background-color: var(--link_group-bg-color);
+    border-radius: 10px;
     margin-bottom: 16px;
   }
-  .linkgroups .linkgroup_cont > span {
-    padding-top: unset;
-    padding-bottom: 10px;
+  nav.nav_index .link_group .link_cont {
+    gap: 6px;
   }
-  .linkgroups .linkgroup_cont .linkgroup {
-    flex-wrap: nowrap;
-    overflow-y: auto;
+  .tutorials {
+    padding: 20px;
   }
-  .linkgroups .linkgroup_cont .linkgroup .link_cont {
-    padding: 10px;
-    height: 110px;
-  }
-  .linkgroups .linkgroup_cont .linkgroup .link_cont:hover > span {
-    font-size: 1.5rem;
-    text-decoration: underline;
-  }
-  .linkgroups .linkgroup_cont .linkgroup span {
-    font-size: 1.3rem;
-  }
-  .linkgroups .misclinks > .linkgroup {
-    justify-content: unset;
-    padding: 0 20px;
-  }
-  .linkgroups .misclinks > .linkgroup .link_cont {
-    width: unset;
-    margin: 10px 20px;
-  }
-  .linkgroups .misclinks > .linkgroup .link_cont:first-child {
-    margin-left: auto;
-  }
-  .linkgroups .misclinks > .linkgroup .link_cont:last-child {
-    margin-right: auto;
-  }
-  .topposts_group {
+  .tutorials .featured {
     flex-direction: row;
-    justify-content: space-between;
   }
-  .topposts_group .postlist_cont .postlist .post {
-    background-color: var(--background-color1);
+  .tutorials .featured .swiper-cont {
+    width: 60%;
+  }
+  .tutorials .featured .featured_description {
+    width: 40%;
+    font-size: 12px;
+  }
+  .tutorials .tcates-title {
+    text-align: left;
+    margin: 20px 0 10px;
+    font-size: 2.1rem;
   }
 }
 @media (min-width: 992px) {
-  .linkgroups {
-    flex-wrap: wrap;
-    justify-content: space-between;
-    flex-direction: row;
-  }
-  .linkgroups .readingtime {
-    width: 54%;
-    padding: 20px 0;
-  }
-  .linkgroups .aboutyou {
-    width: 42%;
-    padding: 20px 0;
-  }
-  .linkgroups .misclinks > .linkgroup {
-    padding: 20px;
-  }
-}
-@media (max-width: 240px) {
-  .linkgroups .link_cont {
-    width: 49% !important;
+  .featured_description {
+    font-size: 16px !important;
   }
 }/*# sourceMappingURL=index.css.map */
