--- a/OmneFictio.Web/wwwroot/css/index.scss
+++ b/OmneFictio.Web/wwwroot/css/index.scss
@@ -1,210 +1,198 @@
-
-
-main{
-    display: flex;
-    flex-direction: column;
-    color: var(--text-color1);
-    position: relative;
-    padding-top: 4px;
+body {
+    background-color: var(--background-color1);
 }
-.linkgroups{
+
+header {
+    border-bottom: 1px solid var(--background-color2);
+}
+
+main {
     display: flex;
     flex-direction: column;
-    .linkgroup_cont{
+}
+
+nav.nav_index {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 20px;
+
+    >span {
+        margin: 10px 0 4px;
+        display: block;
         width: 100%;
-        //background-color: var(--background-color2);
-        margin-bottom: 10px;
-        font-family: 'Itim', cursive;
+        text-align: center;
+        font-family: "Josefin Sans";
+        font-size: 1.2rem;
+    }
+
+    .link_group {
+        width: 100%;
         display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        -webkit-box-shadow: 0px 2px 4px -2px rgb(0 0 0 / 25%);
-        -moz-box-shadow: 0px 2px 4px -2px rgb(0 0 0 / 25%);
-        box-shadow: 0px 2px 4px -2px rgb(0 0 0 / 25%);
-        &:last-child{
-            margin-bottom: unset;
-        }
-        > span{
-            padding-top: 6px;
-            font-size: 2rem;
-            text-align: center;
-        }
-        .linkgroup{
-            width: 100%;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+
+        .link_cont {
+            padding: 7px 10px;
             display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: center;
-            .link_cont{
-                height: 100px;
-                width: 24%;
-                padding: 7px 10px;
+            flex-direction: column;
+            justify-content: space-between;
+            cursor: pointer;
+            align-items: center;
+
+            i {
+                font-size: 2.0rem;
+                text-align: center;
+                height: 32px;
                 display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-                cursor: pointer;
-                i{
-                    font-size: 2.5rem;
-                    text-align: center;
-                    height: 50px;
-                }
-                span{
-                    text-align: center;
-                    transition: 0.1s;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    height: 32px;
-                }
-                i.bi-person{
-                    font-size: 2.8rem;
-                }
+            }
+
+            span {
+                text-align: center;
+                transition: 0.1s;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 30px;
+                font-size: 1.0rem;
+                font-family: 'Itim';
+            }
+
+            &:hover>span {
+                font-size: 1.1rem;
+                text-decoration: underline;
+            }
+
+            i.bi-person {
+                font-size: 2.3rem;
             }
         }
     }
-}
-.darkmode .linkgroup_cont{
-    -webkit-box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 25%);
-    -moz-box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 25%);
-    box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 25%);
+
+    .community_links {
+        margin-top: 6px;
+    }
 }
 
-.misclinks > .linkgroup{
-    padding: unset;
-}
-
-.topposts_group{
+.tutorials {
     display: flex;
     flex-direction: column;
-    gap: 14px 3%;
-    margin-top: 20px;
-    .postlist_cont{
+    width: 100%;
+
+    .featured {
         display: flex;
         flex-direction: column;
-        width: 100%;
-        .top_header{
-            text-align: center;
-            font-size: 1.6rem;
-            font-family: 'Doppio One';
-            margin-bottom: 10px;
-        }
-        .postlist{
+        align-items: flex-start;
+        gap: 8px 2%;
+
+        .swiper-cont {
             width: 100%;
-            .post{
-                margin-bottom: 12px;
-                background-color: var(--index-post-bg-color);
-                .p-info{
-                    background-color: var(--index-post-bg-color);
-                }
+            aspect-ratio: 1 / 0.5;
+            border-radius: 10px;
+            background-color: red;
+
+            img {
+                border-radius: 10px;
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        .featured_description {
+            width: 100%;
+            border-radius: 10px;
+            border: 2px solid var(--background-color2);
+            padding: 10px;
+            display: flex;
+            flex-direction: column;
+
+            h4 {
+                margin-bottom: 10px;
+                font-family: 'Josefin Sans';
+                font-size: 1.1em;
+            }
+
+            span {
+                font-family: 'Gudea';
+                font-size: 0.9em;
             }
         }
     }
-    .todaytop-cont{
+
+    .tcates-title{
+        margin: 14px 0 6px;
+        font-size: 1.8rem;
+        font-family: 'Josefin Sans';
+        text-align: center;
     }
-    .monthtop-cont{
+    .tutorial-categories{
+        padding: 10px;
     }
 }
 
 // Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {
-}
+@media (min-width: 576px) {}
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
-    main{
-        padding-top: 20px;
+    main {
+        flex-direction: row;
+        gap: 20px;
     }
-    .linkgroups{
-        .linkgroup_cont{
-            background-color: var(--background-color1);
-            border-radius: 14px;
+
+    nav.nav_index {
+        width: 340px;
+
+        .link_group {
+            padding: 10px 0 6px;
+            background-color: var(--link_group-bg-color);
+            border-radius: 10px;
             margin-bottom: 16px;
-            > span{
-                padding-top: unset;
-                padding-bottom: 10px;
-            }
-            .linkgroup{
-                flex-wrap: nowrap;
-                overflow-y: auto;
-                .link_cont{
-                    padding: 10px;
-                    height: 110px;
-                    &:hover > span{
-                        font-size: 1.5rem;
-                        text-decoration: underline;
-                    }
-                }
-                span{
-                    font-size: 1.3rem;
-                }
-            }
-        }
-        //Misc links will lose 33% and become a line
-        .misclinks > .linkgroup{
-            justify-content: unset;
-            padding: 0 20px;
-            .link_cont{
-                width: unset;
-                margin: 10px 20px;
-                &:first-child{
-                    margin-left: auto;
-                }
-                &:last-child{
-                    margin-right: auto;
-                }
+
+            .link_cont {
+                //width: 24%;
+                gap: 6px;
             }
         }
     }
 
-    .topposts_group{
-        flex-direction: row;
-        justify-content: space-between;
-        .postlist_cont{
-            .postlist{
-                .post{
-                    background-color: var(--background-color1);
-                }
+    .tutorials {
+        padding: 20px;
+
+        .featured {
+            flex-direction: row;
+
+            .swiper-cont {
+                width: 60%;
             }
+
+            .featured_description {
+                width: 40%;
+                font-size: 12px;
+            }
+        }
+        .tcates-title{
+            text-align: left;
+            margin: 20px 0 10px;
+            font-size: 2.1rem;
         }
     }
 }
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
-    .linkgroups{
-        flex-wrap: wrap;
-        justify-content: space-between;
-        flex-direction: row;
-        .readingtime{
-            width: 54%;
-            padding: 20px 0;
-        }
-        .aboutyou{
-            width: 42%;
-            padding: 20px 0;
-        }
-        .misclinks > .linkgroup{
-            padding: 20px;
-        }
+    .featured_description{
+        font-size: 16px !important;
     }
 }
 
 // Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {
-}
+@media (min-width: 1200px) {}
 
 // Custom
-@media (max-width: 340px) {
-    
-}
-@media (max-width: 240px) {
-    .linkgroups .link_cont{
-        width: 49% !important;
-    }
-}
+@media (max-width: 767.98px) {}
 
+@media (max-width: 340px) {}
 
-// Max widths
-@media (max-width: 767.98px) {
-    
-}
+@media (max-width: 240px) {}
