--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -16,7 +16,8 @@
     string? userPicture = User.FindFirst("actort")?.Value;
 }
 
-<nav class="nav_index">
+<div class="nav__tutorials-cont">
+    <nav class="nav_index">
     <span>Read boi</span>
     <div class="start_reading_links link_group">
         <a class="link_cont" href="/Read/Story">
@@ -96,6 +97,120 @@
     </div>
     <h3 class="tcates-title">Tutorials</h3>
     <div class="tutorial-categories">
+        <a href="#" class="tcate">
+            <div class="tcate-icon">
+                <i class="bi bi-mortarboard"></i>
+            </div>
+            <div class="tcate-body">
+                <h5>Script Writing</h5>
+                <span>How do we write in screenplay format?</span>
+            </div>
+        </a>
+        <a href="#" class="tcate">
+            <div class="tcate-icon">
+                <i class="bi bi-mortarboard"></i>
+            </div>
+            <div class="tcate-body">
+                <h5>Plot</h5>
+                <span>How do we drive the narrative forward?</span>
+            </div>
+        </a>
+        <a href="#" class="tcate">
+            <div class="tcate-icon">
+                <i class="bi bi-mortarboard"></i>
+            </div>
+            <div class="tcate-body">
+                <h5>Story Elements</h5>
+                <span>Let's find out about the core aspects of a story.</span>
+            </div>
+        </a>
+        <a href="#" class="tcate">
+            <div class="tcate-icon">
+                <i class="bi bi-mortarboard"></i>
+            </div>
+            <div class="tcate-body">
+                <h5>Pacing</h5>
+                <span>Is this good? Should I go faster?</span>
+            </div>
+        </a>
+        <a href="#" class="tcate">
+            <div class="tcate-icon">
+                <i class="bi bi-mortarboard"></i>
+            </div>
+            <div class="tcate-body">
+                <h5>Narration</h5>
+                <span>Who... Who said that? I see you.</span>
+            </div>
+        </a>
+        <a href="#" class="tcate">
+            <div class="tcate-icon">
+                <i class="bi bi-mortarboard"></i>
+            </div>
+            <div class="tcate-body">
+                <h5>Genre</h5>
+                <span>Working with different genres.</span>
+            </div>
+        </a>
+        <a href="#" class="tcate">
+            <div class="tcate-icon">
+                <i class="bi bi-mortarboard"></i>
+            </div>
+            <div class="tcate-body">
+                <h5>Language</h5>
+                <span>Fancy narration is the seasoning of a story.</span>
+            </div>
+        </a>
+        <a href="#" class="tcate">
+            <div class="tcate-icon">
+                <i class="bi bi-mortarboard"></i>
+            </div>
+            <div class="tcate-body">
+                <h5>Story Arc</h5>
+                <span>Gotta know what to do and when to do.</span>
+            </div>
+        </a>
+        <a href="#" class="tcate">
+            <div class="tcate-icon">
+                <i class="bi bi-mortarboard"></i>
+            </div>
+            <div class="tcate-body">
+                <h5>Visual stuff</h5>
+                <span>What do we do with the cover and illustrations?</span>
+            </div>
+        </a>
+        <a href="#" class="tcate">
+            <div class="tcate-icon">
+                <i class="bi bi-mortarboard"></i>
+            </div>
+            <div class="tcate-body">
+                <h5>Draft</h5>
+                <span>A draft of the final product is necessary.</span>
+            </div>
+        </a>
+        <a href="#" class="tcate">
+            <div class="tcate-icon">
+                <i class="bi bi-mortarboard"></i>
+            </div>
+            <div class="tcate-body">
+                <h5>Launch</h5>
+                <span>Are you done? I don't think so.</span>
+            </div>
+        </a>
+    </div>
+</div>
+</div>
 
+<div class="topposts_group">
+    <div class="postlist_cont todaytop-cont">
+        <span class="top_header">Today's Top Posts</span>
+        <div class="postlist todaytop_body">
+            
+        </div>
+    </div>
+    <div class="postlist_cont monthtop-cont">
+        <span class="top_header">Month's Top Posts</span>
+        <div class="postlist monthtop_body">
+            
+        </div>
     </div>
 </div>
