--- a/OmneFictio.Web/wwwroot/css/theme.css
+++ b/OmneFictio.Web/wwwroot/css/theme.css
@@ -28,8 +28,10 @@
   --navlink-aboutyou-color-hover: #6c5959;
   --navlink-others-color: #494152;
   --navlink-others-color-hover: #5f5a66;
-  --index-post-bg-color: #222222;
+  --index-post-bg-color: #313131;
   --link_group-bg-color: #313131;
+  --tcate-bgcolor: #313131;
+  --tcate-hover: #454545;
   --register-form-color: #404040;
   --register-input-color: #1d1d1d;
   --publish-form-color: #404040;
@@ -92,8 +94,10 @@
   --navlink-aboutyou-color-hover: #8d6767;
   --navlink-others-color: #9a90a6;
   --navlink-others-color-hover: #816f96;
-  --index-post-bg-color: #e5e5e5;
+  --index-post-bg-color: #ffffff;
   --link_group-bg-color: #ffffff;
+  --tcate-bgcolor: #f9f9f9;
+  --tcate-hover: #ffffff;
   --register-form-color: #f0f0f0;
   --register-input-color: #dcdcdc;
   --publish-form-color: #f0f0f0;
