--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -37,8 +37,10 @@
     --navlink-others-color: #494152;
     --navlink-others-color-hover: #5f5a66;
     //index
-    --index-post-bg-color: #222222;
+    --index-post-bg-color: #313131;
     --link_group-bg-color: #313131;
+    --tcate-bgcolor: #313131;
+    --tcate-hover: #454545;
     //read
     //register
     --register-form-color: #404040;
@@ -120,8 +122,10 @@
     --navlink-others-color: #9a90a6;
     --navlink-others-color-hover: #816f96;
     //index
-    --index-post-bg-color: #e5e5e5;
+    --index-post-bg-color: #ffffff;
     --link_group-bg-color: #ffffff;
+    --tcate-bgcolor: #f9f9f9;
+    --tcate-hover: #ffffff;
     //read
     //register
     --register-form-color: #f0f0f0;
